Connect genreRemoved signal to data models

BUG: 492353